--- a/blocks/src/contact-info/editor.scss
+++ b/blocks/src/contact-info/editor.scss
@@ -1,9 +1,3 @@
-/**
- * The following styles get applied inside the editor only.
- *
- * Replace them with your own styles or remove the file completely.
- */
-
 .wp-block-fim-ministries-contact-info {
-	border: 1px dotted #f00;
+	border-bottom: 1px dotted #000000;
 }
