--- a/blocks/src/contact-info/editor.scss
+++ b/blocks/src/contact-info/editor.scss
@@ -1,3 +1,55 @@
 .wp-block-fim-ministries-contact-info {
-	border-bottom: 1px dotted #000000;
+	display: block;
+	position: relative;
+
+	.edit_contact{
+		display: block;
+		position: absolute;
+		margin:0;
+		padding:0;
+		top:0;
+		left:0;
+		width: 100%;
+		height: 100%;
+		z-index: 10;
+
+		&:before{
+			content: '';
+			display: block;
+			width: 100%;
+			height: 100%;
+			top:0;
+			left:0;
+			background-color: #cccccc;
+			opacity: 0;
+		}
+
+		span{
+			color: #000;
+			opacity: 0;
+			display: block;
+			position: absolute;
+			width: 100%;
+			top: 50%;
+			transform: translateY(-50%);
+			z-index: 1;
+		}
+
+		&:hover{
+			&:before{
+				opacity: .6;
+			}
+			span{
+				opacity: 1;
+			}
+		}
+
+
+
+	}
+
+	.new-contact-container{
+		color: #cccccc;
+		font-style: italic;
+	}
 }
