--- a/blocks/src/contact-info/style.scss
+++ b/blocks/src/contact-info/style.scss
@@ -1,26 +1,14 @@
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
+//Front + Back End styles
 
- .wp-block-fim-ministries-contact-info.contacts-list .contact {
+ .wp-block-fim-ministries-contact-info {
    padding-bottom: 20px;
-   border-bottom: 1px dotted #000000;
- }
- .wp-block-fim-ministries-contact-info.contacts-list p.contact-info {
-   margin: 0;
-   padding: 0;
- }
- .wp-block-fim-ministries-contact-info.contacts-list:last-child .contact {
-   border-bottom: 0;
- }
-
-
- .wp-block-fim-ministries-contact-info{
-   .contactinfo-header{
-     padding-top:0;
-     margin-top:0
+    h4{
+      margin-top:0;
+    }
+    span{
+       display: block;
+       padding-bottom: .5em;
+       clear: both;
    }
+
  }
